--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   form_field_validator: ^1.1.0
   cached_network_image: ^3.2.0
+  google_fonts: ^6.2.1
   flutter_rating_bar: ^4.0.1
   flutter_widget_from_html_core: ^0.15.1
   animations: ^2.0.11
