final main challenge

--- a/Main Challenge/pubspec.yaml
+++ b/Main Challenge/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   flutter_widget_from_html_core: ^0.15.1
   animations: ^2.0.11
   url_launcher: ^6.3.0
+  http: ^1.0.0
+  speech_to_text: ^7.0.0
 
 dev_dependencies:
   flutter_test:
