--- a/Main Challenge/pubspec.yaml
+++ b/Main Challenge/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   url_launcher: ^6.3.0
   http: ^1.0.0
   speech_to_text: ^7.0.0
+  shared_preferences: ^2.2.0
 
 dev_dependencies:
   flutter_test:
